--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-1.jpg" class="work-box"> <img src="images/work-1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Project Name</h5>
-            <p>Logo Design</p>
+            <h5>SnakeQ</h5>
+            <p>Reinforcement Learning</p>
           </div>
         </div>
         <!-- overlay --> 
