added dotfiles to portfolio

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="css/responsive.css">
 <link rel="stylesheet" href="css/animate.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -62,7 +63,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
 
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/rasterroo/snakeLearning" class="work-box"> <img src="images/work-1.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/rasterroo/snakeLearning" class="work-box"> <img src="images/work-8.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>SnakeQ</h5>
@@ -71,16 +72,16 @@
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://rasterroo.github.io/CS498DV/" class="work-box"> <img src="images/work-2.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://rasterroo.github.io/CS498DV/" class="work-box"> <img src="images/work-1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Automobile Visualization</h5>
-            <p>D3.js</p>
+            <h5>AutoVis</h5>
+            <p>Narrative Visualization with D3.js</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://rasterroo.github.io/curIQ/" class="work-box"> <img src="images/work-3.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://rasterroo.github.io/curIQ/" class="work-box"> <img src="images/work-2.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>CurIQ</h5>
@@ -89,16 +90,25 @@
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-4.jpg" class="work-box"> <img src="images/work-4.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-4.jpg" class="work-box"> <img src="images/work-7.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Project Name</h5>
-            <p>Graphic Design</p>
+            <h5>Raster News</h5>
+            <p>Smarter News Recommendations</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> </div>
-      
+        <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/rasterroo/dotfiles" class="work-box"> <img src="images/work-3.jpg" alt="">
+          <div class="overlay">
+            <div class="overlay-caption">
+              <h5>DotFiles</h5>
+              <p>Arch Linux Configs</p>
+            </div>
+          </div>
+        <!-- overlay --> 
+        </a> </div>
+
     </div>
   </div>
 </section>
