--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center"> <img src="images/nord-cup.jpg" alt="rasterroo" id="profilePNG">
         <h1>Hi, I'm Robert.</h1>
-        <p>I am 22 and graduated from <a href="https://cs.illinois.edu/">CS@Illinois</a>. I'm an aspiring data scientist who loves programming and learning new things. </p>
+        <p>I am 22 and graduated from <a href="https://cs.illinois.edu/">CS@Illinois</a>. I'm an aspiring programmer who is mainly interested in data science, specifically NLP and ML related problems.
+          
+          
+        </p>
         <p style="font-size:24px; line-height: 0px;" >rasterroo@gmail.com </p>
         <footer class="section footer">
           <ul class="footer-share">
