--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
             <li><a href="https://github.com/rasterroo"><i class="fa fa-github" style="font-size:30px"></i></a></li>
             <li><a href="https://www.linkedin.com/in/rasterroo/"><i class="fa fa-linkedin" style="font-size:30px"></i></a></li>
+            <li><a href="https://twitter.com/RasterRoo"><i class="fa fa-twitter" style="font-size:30px"></i></a></li>
           </ul>
           
         </footer>
