--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <section class="banner" role="banner">
   <header id="header"> 
     <!-- navigation section  -->
-    <div class="header-content clearfix"> <a class="logo" href="#" style="font-size: 32px;color: #fff;">Rasterroo</a>
+    <div class="header-content clearfix"> <a class="logo" href="#" style="font-size: 50px;color: #fff;"><i class="fas fa-home"></i></a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
-          
+          <!-- <a class="logo" href="#" style="font-size: 60px;color: #fff;"><i class="fas fa-home"></i></a> !-->
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
