reduced icon link sizes

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
         <footer class="section footer">
           <ul class="footer-share">
-            <li><a href="https://github.com/rasterroo"><i class="fab fa-github-alt" style="font-size:30px"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in" style="font-size:30px"></i></a></li>
-            <li><a href="https://twitter.com/RasterRoo"><i class="fab fa-twitter" style="font-size:30px"></i></a></li>
-            <li><a href="https://www.reddit.com/user/rasterroo"><i class="fab fa-reddit-alien" style="font-size:30px"></i></a></li>
-            <li><a href="https://www.hackerrank.com/rasterroo"><i class="fab fa-hackerrank" style="font-size:30px"></i></a></li>
+            <li><a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://twitter.com/RasterRoo"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.reddit.com/user/rasterroo"><i class="fab fa-reddit-alien"></i></i></a></li>
+            <li><a href="https://www.hackerrank.com/rasterroo"><i class="fab fa-hackerrank"></i></a></li>
           </ul> 
         </footer>
         
