--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <section class="banner" role="banner">
   <header id="header"> 
     <!-- navigation section  -->
-    <div class="header-content clearfix"> <a class="logo" href="#" style="font-size: 20px;color: #000;"><i class="fas fa-home"></i></a>
+    <div class="header-content clearfix"> 
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <!-- <a class="logo" href="#" style="font-size: 60px;color: #fff;"><i class="fas fa-home"></i></a> !-->
