--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center"> <img src="images/nord-cup.jpg" alt="rasterroo" id="profilePNG">
         <h1>Hi, I'm Robby.</h1>
-        <p style="padding-left: 15%;">I completed my B.S. in CS at <a href="https://cs.illinois.edu/">CS@Illinois</a>. I'm an aspiring developer who is interested in 
-          web development and linux administration.
+        <p style="padding-left: 15%;">I completed my B.S. in CS at <a href="https://cs.illinois.edu/">CS@Illinois</a>. I'm mainly interested in 
+          web development and devops. I plan to get some years of industry experience and decide from there what I want to study in graduate school. 
+          At the moment, I work as a software developer for State Farm.
         </p>
         <p style="font-size:24px; line-height: 0px; text-align: center;" >rasterroo@gmail.com</p>
 
