added polaroid image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <!-- <a class="logo" href="#" style="font-size: 60px;color: #fff;"><i class="fas fa-home"></i></a> !-->
-          <a href="robert_resume.pdf" download>RESUME<i class="fas fa-file-download" style="font-size:20px; "></i></i></a>
+          <a href="robert_resume.pdf" download>Resume <i class="fas fa-file-download" style="font-size:20px; "></i></i></a>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
@@ -34,7 +34,14 @@
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
-        <div class="col-md-10 col-md-offset-1 text-center"> <img src="images/nord-cup.jpg" alt="rasterroo" id="profilePNG">
+        <div class="col-md-10 col-md-offset-1 text-center"> 
+          <!--<img src="images/winding-road.jpg" alt="rasterroo" id="profilePNG">-->
+          <div class="polaroid">
+            <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
+            <div class="container">
+              <p>Road to somewhere.</p>
+            </div>
+          </div>
         <h1>Hi, I'm Robby.</h1>
         <p style="padding-left: 15%;">I completed my B.S. in CS at <a href="https://cs.illinois.edu/">CS@Illinois</a>. I'm mainly interested in 
           web development and devops. I plan to get some years of industry experience and decide from there what I want to study in graduate school. 
