removed navigation bar

--- a/index.html
+++ b/index.html
@@ -19,18 +19,7 @@
 <body>
 <!-- header section -->
 <section class="banner" role="banner">
-  <header id="header"> 
-    <!-- navigation section  -->
-    <div class="header-content clearfix"> 
-      <nav class="navigation" role="navigation">
-        <ul class="primary-nav">
-          <!-- <a class="logo" href="#" style="font-size: 60px;color: #fff;"><i class="fas fa-home"></i></a> !-->
-          <a href="robert_resume.pdf" download>Resume <i class="fas fa-file-download" style="font-size:20px; "></i></i></a>
-        </ul>
-      </nav>
-      <a href="#" class="nav-toggle">Menu<span></span></a> </div>
-    <!-- navigation section  --> 
-  </header>
+  
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
@@ -46,6 +35,7 @@
         
         <footer class="section footer">
           <ul class="footer-share">
+            <li><a href="roberthsu_resume.pdf"><i class="fas fa-file-alt"></i></a></li>
             <li><a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a></li>
             <li><a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a></li>
             <li><a href="https://twitter.com/RasterRoo"><i class="fab fa-twitter"></i></a></li>
