--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           web development and devops. I plan to get some years of industry experience and decide from there what I want to study in graduate school. 
           At the moment, I work as a software developer for State Farm.
         </p>
-        <p style="font-size:24px; line-height: 0px; text-align: center;" >rasterroo@gmail.com</p>
+        <p style="font-size:22px; line-height: 0px; text-align: center;" >rasterroo@gmail.com</p>
         
         <footer class="section footer">
           <ul class="footer-share">
@@ -44,7 +44,7 @@
         <div class="polaroid">
           <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
           <div class="container">
-            <p>Road to somewhere.</p>
+            <p>A peaceful road bearing peace of mind.</p>
           </div>
         </div>
       </div>
