--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>rasterroo</title>
+<title>Greetings</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
 <link rel="stylesheet" href="css/main.css">
@@ -31,10 +31,10 @@
           web development and devops. I plan to get some years of industry experience and see where I go from there.
           At the moment, I work as a software developer for State Farm Insurance. Feel free to email me for any inquiries. Cheers.
         </p>
-        <p style="font-size:22px; line-height: 0px; text-align: center; padding-top: 20px;" >rasterroo@gmail.com</p>
+        <p style="font-size:20px; line-height: 0px; text-align: center; padding-top: 20px; padding-right: 35%;" >rasterroo@gmail.com</p>
         
         <footer class="section footer">
-          <ul class="footer-share">
+          <ul class="footer-share" style="padding-right: 45%">
             <li><a href="roberthsu_resume.pdf"><i class="fas fa-file-alt"></i></a></li>
             <li><a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a></li>
             <li><a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a></li>
