--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <p style="padding-left: 15%;">I completed my B.S. in CS at <a href="https://cs.illinois.edu/">University of Illinois</a>. I'm mainly interested in 
           web development and devops. I plan to get some years of industry experience and see where I go from there.
-          At the moment, I work as a software developer for State Farm Insurance. Feel free to email me for any inquiries. Cheers.
+          At the moment, I work as a software developer for State Farm. Feel free to email me for any inquiries. Cheers.
         </p>
         <p style="font-size:20px; line-height: 0px; text-align: center; padding-top: 20px; padding-right: 35%;" >rasterroo@gmail.com</p>
         
