--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="polaroid">
           <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
           <div class="container">
-            <p>I don't know what I am doing, but at least it's fun.</p>
+            <p>I don't know what I am doing.</p>
           </div>
         </div>
       </div>
