--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="col-md-10 col-md-offset-1 text-center"> 
         <h2>Hi, I'm Robby.</h2>
         
-        <p style="padding-left: 15%;">I did some CS at UIUC. What I enjoyed learning most was designing distributed systems and web development. 
-          I work as a software developer for State Farm. Email me if you want to talk about anything. Other than that, Cheers.
+        <p style="padding-left: 15%;">I attended CS@UIUC. I enjoy learning about distributed systems, computer graphics, and web development. 
+          I will work as a software developer for State Farm. If you want to talk about anything, just email me. Cheers.
         </p>
         <p style="font-size:20px; line-height: 0px; text-align: center; padding-top: 20px; padding-right: 35%;" >rasterroo@gmail.com</p>
         
@@ -37,7 +37,7 @@
         <div class="polaroid">
           <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
           <div class="container">
-            <p>I don't know what I am doing.</p>
+            <p>('ㅅ') What is this...</p>
           </div>
         </div>
       </div>
