--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div style="padding-left: 15%;">
           <p>I attended CS@UIUC. I enjoy learning about distributed systems, computer graphics, and web development. 
             I work as a software developer for State Farm. 
-            <p>My email - <b>rasterroo@gmail.com</b>
-            </p>
+            <p><b>rasterroo@gmail.com</b></p>
             
           </p>
         </div>
