--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="col-md-10 col-md-offset-1 text-center"> 
 
         <h2>Hi, I'm Bobby.</h2> 
-        <div style="padding-left: 5%;">
+        <div>
           <p>I attended CS@UIUC. I enjoy learning about distributed systems, computer graphics, and web development. 
             I work as a software developer for State Farm. 
             <p><b>rasterroo@gmail.com</b></p>
