--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
         <h2>Hi, I'm Bobby.</h2> 
         <div>
-          <p>I attended CS@UIUC. I enjoy learning about distributed systems, computer graphics, and web development. 
-            I work as a software developer for State Farm. 
-            <p><b>rasterroo@gmail.com</b></p>
+          <p>CS@UIUC graduate. Topics of interest: distributed systems, computer graphics, POSIX, all things Linux. 
+            I currently work as a software developer, but who knows. For now, I get paid to write lines on 
+            a computer that may or may not be used by someone. Such is life.
+          <p style="text-align: center;"><b>rasterroo@gmail.com</b></p>
             
           </p>
+          <q>Look at that subtle off-white coloring. The tasteful thickness of it.</q>
         </div>
         <footer class="section footer">  
           <ul class="footer-share" style="align-self: center;">
