--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hi, I'm Robert.</h2>
+        <h2>Why hello there.</h2>
         <div>
-          <p>CS@UIUC graduate, with a focus in big data.
-            Topics of interest: distributed systems and computer graphics.<br>
+          <p>I'm Robert. I studied CS at UIUC and Depaul focused mainly on Big Data topics. My personal hobbies include "speedrunning" and running...<br>
             Email: rasterroo@gmail.com
           </p>
           <p> >
