--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="col-md-10 col-md-offset-1 text-center">
         <h2>Why hello there.</h2>
         <div>
-          <p>I'm Robert. I studied CS at UIUC and Depaul focused mainly on Big Data topics. My personal hobbies include "speedrunning" and running...<br>
-            Email: rasterroo@gmail.com
+          <p>I'm Robert. I studied CS@UIUC focused mainly on Big Data topics. My personal hobbies include "speedrunning" and running. You can reach me at rasterroo@gmail.com
+            
           </p>
           <p> >
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
