--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>hello there</h2>
+        <h2>Hello</h2>
         <div>
           <p>
-            I'm Robert. I studied CS@UIUC focused mainly on Big Data topics. 
-            My personal hobbies include "speedrunning" and running. 
-            You can reach me at rasterroo@gmail.com          
+            I'm Robert Hsu. I studied CS@UIUC. 
+            My personal hobbies include "speedrunning" & running. 
+            Reach me at rasterroo@gmail.com          
           </p>
           <p> >
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
