--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <h2>Hello</h2>
         <div>
           <p>
-            I'm Robert Hsu. I studied CS@UIUC. 
-            My personal hobbies include "speedrunning" & running. 
+            I'm Bobby Hsu. I studied CS@UIUC. I develop software for a living.
             Reach me at rasterroo@gmail.com          
           </p>
           <p> >
