--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hello</h2>
+        <h2>Hi</h2>
         <div>
           <p>
-            I'm Bobby Hsu. I studied CS@UIUC. I develop software for a living.
-            Reach me at rasterroo@gmail.com          
+            I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."
+            Email: rasterroo@gmail.com          
           </p>
           <p> >
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
