--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Hi</h2>
         <div>
           <p>
-            I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."
+            I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."<br>
             Email: rasterroo@gmail.com          
           </p>
           <p> >
