--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>
           <p>
             I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."<br>
-            Email: rasterroo@gmail.com          
+            Contact me here -> rasterroo@gmail.com          
           </p>
           <p> >
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
