--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <h2>Hi</h2>
         <div>
           <p>
-            I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."<br>
-            <br>Contact me here -> rasterroo@gmail.com          
+            I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."
+            <br>> rasterroo@gmail.com          
           </p>
           <p> >
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
