--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           <p>
             I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."         
           </p>
-          <p> > rasterroo@gmail.com 
+          <p> 
+            > rasterroo@gmail.com 
           </p>
           <p> >
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
