--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hi</h2>
+        <h2>Hello</h2>
         <div>
           <p>
             I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."         
