--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
-<!-- CITATION: https://www.free-css.com/free-css-templates/page218/minifolio -->
-<html class="no-js" lang="">
+<html>
 
 <head>
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Greetings</title>
+<title>:D</title>
+<link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/main.css">
-<script src="https://kit.fontawesome.com/a104d5778e.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
-<!-- header section -->
-<section class="banner" role="banner">
+    <h1>Hello</h1>
+    <div class="lines">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    <section class="banner" role="banner">
 
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
@@ -38,6 +40,6 @@
     </div>
   </div>
 </section>
-
 </body>
+    
 </html>
