--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!doctype html>
-<html>
+<html class="no-js" lang="">
 
 <head>
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>:D</title>
-<link rel="stylesheet" href="main.css">
+<title>Greetings</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/main.css">
+<script src="https://kit.fontawesome.com/a104d5778e.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-    <h1>Hello</h1>
-    <div class="lines">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-    </div>
-    <section class="banner" role="banner">
-
+<!-- header section -->
+<section class="banner" role="banner">
+  <div class="lines">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
@@ -40,6 +41,6 @@
     </div>
   </div>
 </section>
+
 </body>
-    
 </html>
