--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Greetings</title>
+<title>There</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.css">
 <script src="https://kit.fontawesome.com/a104d5778e.js" crossorigin="anonymous"></script>
@@ -27,14 +27,16 @@
         <h2>Hello</h2>
         <div>
           <p>
-            I'm Robert Hsu. I studied CS@UIUC with a focus on big data/data science. Two of my favorite pastimes are running and "speed-running."         
+            I am Robert Hsu, also called Bobby. I am a software developer who studied Computer Science at UIUC with a focus on big data/data science. I enjoy running and "speed-running" games I find interesting.
+            <img src="images/catJAM.gif" alt="cat" width="25"/>
           </p>
           <p> 
-            > rasterroo@gmail.com 
+            rasterroo@gmail.com  
           </p>
-          <p> >
+          <p> 
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
             <a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a>
+            
           </p>
         </div>
       </div>
