--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hello</h2>
         <div>
           <p>
-            I am Robert Hsu, also called Bobby. I am a software developer who studied Computer Science at UIUC with a focus on big data/data science. I enjoy running and "speed-running" games I find interesting.
+            I am Robert Hsu, also called Bobby. I am a software developer that studied CS at UIUC with a focus on big data/data science. I enjoy running and "speed-running" games I find interesting.
             <img src="images/catJAM.gif" alt="cat" width="25"/>
           </p>
           <p> 
