--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hello</h2>
+        <h2><img src="images/catJAM.gif" alt="cat" width="50"/></h2>
         <div>
           <p>
             I am Robert Hsu, also called Bobby. I am a software developer that studied CS at UIUC with a focus on big data/data science. I enjoy running and "speed-running" games I find interesting.
-            <img src="images/catJAM.gif" alt="cat" width="25"/>
           </p>
           <p> 
             rasterroo@gmail.com  
@@ -36,7 +35,6 @@
           <p> 
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
             <a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a>
-            
           </p>
         </div>
       </div>
