--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>There</title>
+<title>Almost There</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.css">
 <script src="https://kit.fontawesome.com/a104d5778e.js" crossorigin="anonymous"></script>
@@ -24,10 +24,10 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2><img src="images/catJAM.gif" alt="cat" width="50"/></h2>
+        <h2>Hi</h2>
         <div>
           <p>
-            I am Robert Hsu, also called Bobby. I am a software developer that studied CS at UIUC with a focus on big data/data science. I enjoy running and "speed-running" games I find interesting.
+            I am Robert Hsu, also called Bobby. I am a software developer that studied CS at UIUC. I enjoy running and "speed-running" games I find interesting.
           </p>
           <p> 
             rasterroo@gmail.com  
