--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hi</h2>
         <div>
           <p>
-            I am Robert Hsu, also called Bobby. I am a software developer that studied CS at UIUC. I enjoy running and "speed-running" games I find interesting.
+            I am Robert Hsu, also called Bobby. I am a software engineer that studied CS at UIUC and DePaul. I enjoy running and "speed-running" my favorite games.
           </p>
           <p> 
             rasterroo@gmail.com  
