--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Almost There</title>
+<title>A Title</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.css">
 <script src="https://kit.fontawesome.com/a104d5778e.js" crossorigin="anonymous"></script>
@@ -24,17 +24,15 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hi</h2>
+        <h2>Hi,</h2>
         <div>
           <p>
-            I am Robert Hsu, also called Bobby. I am a software engineer that studied CS at UIUC and DePaul. I enjoy running and "speed-running" my favorite games.
+            I am Bobby Hsu. I enjoy casual running, climbing, and speedrunning my favorite games. 
+            <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
+            <a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a>
           </p>
           <p> 
             rasterroo@gmail.com  
-          </p>
-          <p> 
-            <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
-            <a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a>
           </p>
         </div>
       </div>
