--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="lines">
     <div class="line"></div>
     <div class="line"></div>
+    <div class="line"></div>
   </div>
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
