--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hi,</h2>
         <div>
           <p>
-            I am Bobby Hsu. I enjoy casual running, climbing, and speedrunning my favorite games. 
+            my name is Robert, but most just call me Bobby. I am currently a software enginner studying for a Masters part time at Georgia Tech. Outside of work I enjoy running, climbing, and speedrunning my favorite games. 
           </p>
           <p> 
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
