--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>rasterroo</title>
+<title>Bobby</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.css">
 <script src="https://kit.fontawesome.com/a104d5778e.js" crossorigin="anonymous"></script>
@@ -24,10 +24,10 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hi,</h2>
+        <h2>Hi.</h2>
         <div>
           <p>
-            my name is Robert, but most just call me Bobby. I am currently a software enginner studying for a Masters part time at Georgia Tech. Outside of work I enjoy running, climbing, and speedrunning my favorite games. 
+            My name is Robert, but most just call me Bobby. I am currently a software engineer at State Farm and also getting a Masters in CS @ Georgia Tech. Outside of work I enjoy running, climbing, and speedrunning my favorite games. 
           </p>
           <p> 
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
