--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 <!-- header section -->
 <section class="banner" role="banner">
-  <div class="lines">
+<!--   <div class="lines">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
-  </div>
+  </div> -->
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
@@ -27,7 +27,8 @@
         <h2>Hi.</h2>
         <div>
           <p>
-            My name is Robert, but most just call me Bobby. I am currently a software engineer at State Farm and also getting a Masters in CS @ Georgia Tech. Outside of work I enjoy running, climbing, and speedrunning my favorite games. 
+            my name is Robert, also known as Bobby. I am a full-time software engineer and a part-time Masters student studying CS @ Georgia Tech. 
+            I enjoy casual running, climbing, and speedrunning my favorite games. 
           </p>
           <p> 
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
