--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
           <p> 
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
-            <a href="https://www.linkedin.com/in/rasterroo/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin-in"></i></a>
           </p>
         </div>
       </div>
