--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hi.</h2>
+        <h2>Hi!</h2>
         <div>
           <p>
-            my name is Robert, also known as Bobby. I am a full-time software engineer and a part-time Masters student studying CS @ Georgia Tech. 
-            I enjoy casual running, climbing, and speedrunning my favorite games. 
+            My name is Robert, but I usually go by Bobby. I am a full-time Data Engineer and a part-time Masters student studying CS @ GATech. 
+            I enjoy casual running and "speedrunning" my favorite oldschool games. Feel free to connect with me on LinkedIn!
           </p>
           <p> 
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
