--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 <!-- header section -->
 <section class="banner" role="banner">
-<!--   <div class="lines">
+    <div class="lines">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
-  </div> -->
+  </div>
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
