--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="lines">
     <div class="line"></div>
     <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
   </div>
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
@@ -30,7 +33,7 @@
             I enjoy casual running and "speedrunning" my favorite oldschool games. Feel free to connect with me on LinkedIn!
           </p>
           <p> 
-            <a href="robert_hsu_resume.pdf"><i class="fab fa-file-text"></i></a>
+            <a href="robert_hsu_resume.pdf"><i class="fab fa-file-alt"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin-in"></i></a>
           </p>
