--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             I enjoy casual running and "speedrunning" my favorite oldschool games. Feel free to connect with me on LinkedIn!
           </p>
           <p> 
-            <a href="robert_hsu_resume.pdf"><i class="fa-solid fa-file-pdf"></i></a>
-            <a href="https://github.com/rasterroo"><i class="fab fa-github-alt"></i></a>
-            <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="robert_hsu_resume.pdf"><i class="fab fa-readme"></i></a>
+            <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
+              <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
           </p>
         </div>
       </div>
