--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h2>Hi!</h2>
         <div>
           <p>
-            My name is Robert, but I usually go by Bobby. I am a full-time Data Engineer and a part-time Masters student studying CS @ GATech. 
+            My name is Bobby Hsu. I am a Data Engineer and a part-time Masters student studying CS @ GATech. 
             I enjoy casual running and "speedrunning" my favorite oldschool games. Feel free to connect with me on LinkedIn!
           </p>
           <p> 
-            <a href="robert_hsu_resume.pdf"><i class="fab fa-creative-commons-share"></i></a>
+            <a href="robert_hsu_resume.pdf">Resume<i class="fab fa-readme"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
               <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
           </p>
