--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
           <p> 
             <a href="robert_hsu_resume.pdf"><i class="fab fa-readme"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
-              <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
           </p>
         </div>
       </div>
+      <div class="polaroid">
+          <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
+          <div class="container">
+            <p>A peaceful road, a peaceful mind.</p>
+          </div>
+      </div>   
     </div>
   </div>
 </section>
