--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
           </p>
         </div>
-      </div>
-      <div class="polaroid">
-          <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
+        <div class="polaroid">
+          <img src="images/winding-road.jpg" alt="Winding Road">
           <div class="container">
             <p>A peaceful road, a peaceful mind.</p>
           </div>
-      </div>   
+        </div>   
+      </div>
+      
     </div>
   </div>
 </section>
