--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </p>
         </div>
         <div class="polaroid">
-          <img src="images/winding-road.jpg" alt="Winding Road">
+          <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
           <div class="container">
             <p>A peaceful road, a peaceful mind.</p>
           </div>
