--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
           </p>
         </div>
+        <footer class="section footer">
+        </footer>    
         <div class="polaroid">
           <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
           <div class="container">
