--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="polaroid">
           <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
           <div class="container">
-            <p>A peaceful road, a peaceful mind.</p>
+            <p>A peaceful road.</p>
           </div>
         </div>   
       </div>
