--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             I enjoy casual running and "speedrunning" my favorite oldschool games. Feel free to connect with me on LinkedIn!
           </p>
           <p> 
-            <a href="bobby_hsu_resume.pdf"><i class="far fa-file"></i></a>
+            <a href="bobby_hsu_resume.pdf"><i class="fal file-pdf"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/rasterroo/"><i class="fab fa-instagram"></i></a>
