--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <footer class="section footer">
         </footer>    
         <div class="polaroid">
-          <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
-          <div class="container">
-            <p>A peaceful road.</p>
-          </div>
+          <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ">
+            <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
+            <div class="container">
+              <p>A peaceful road.</p>
+            </div>
+          </a>
         </div>   
       </div>
       
