moving link to whole div

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
           </p>
         </div>
         <footer class="section footer">
-        </footer>    
-        <div class="polaroid">
-          <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ">
-            <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
-            <div class="container">
-              <p>A peaceful road.</p>
-            </div>
-          </a>
-        </div>   
+        </footer>
+        <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ"></a>    
+          <div class="polaroid">
+              <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
+              <div class="container">
+                <p>A peaceful road.</p>
+              </div>
+          </div>
+        </a>   
       </div>
       
     </div>
