--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <footer class="section footer">
         </footer>
-        <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ"></a>    
+        <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ">    
           <div class="polaroid">
               <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
               <div class="container">
