--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </footer>
         <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ">    
           <div class="polaroid">
-              <img src="images/winding-road.jpg" alt="Winding Road" style="width:100%">
+              <img src="images/TP-home.jpg" alt="Home" style="width:100%">
               <div class="container">
                 <p>A peaceful road.</p>
               </div>
