--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <h2>Hi!</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I am a Data Engineer and a part-time Masters student studying CS @ GATech. 
-            I enjoy casual running and "speedrunning" my favorite oldschool games. Feel free to connect with me on LinkedIn!
+            My name is Bobby Hsu. I am a Lead Data Engineer and a part-time Masters student studying CS @ GATech. 
+            I enjoy running and "speedrunning" my favorite games, including my favorite game of all time The Legend of Zelda Twilight Princess. 
+            Feel free to connect with me on LinkedIn to connect and talk!
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file"></i></a>
