--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="polaroid">
               <img src="images/TP-home.jpg" alt="Home" style="width:100%">
               <div class="container">
-                <p>My home.</p>
+                <p>Home.</p>
               </div>
           </div>
         </a>   
