--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I am a Lead Data Engineer and a part-time Masters student studying CS @ GATech. 
-            I enjoy running and "speedrunning" my favorite games, including my favorite game of all time The Legend of Zelda Twilight Princess.
+            My name is Bobby Hsu. I am a Lead Data Engineer and a current Masters student studying CS@GATech, with an undegrad from CS@UIUC. 
+            I enjoy running and "speedrunning" my favorite games, including my favorite game The Legend of Zelda Twilight Princess.
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file"></i></a>
