--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I am a Lead Data Engineer and a current Masters student studying CS@GATech, with an undegrad from CS@UIUC. 
+            My name is Bobby Hsu. I am a Lead Data Engineer and a current Masters student studying CS at Georgia Tech. 
             I enjoy running and "speedrunning" my favorite games, including my favorite game The Legend of Zelda Twilight Princess.
           </p>
           <p> 
