--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ">    
           <div class="polaroid">
-              <img src="images/TP-home.jpg" alt="Home" style="width:100%">
+              <img src="images/cat-fish.png" alt="Home" style="width:100%">
               <div class="container">
                 <p>Home</p>
               </div>
