updating personal page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hi</h2>
+        <h2>Hello</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I am a Data Engineer @ Meta and a Masters student studying CS at Georgia Tech. 
-            I enjoy running and "speedrunning" my favorite games, including my favorite game The Legend of Zelda Twilight Princess.
+            My name is Bobby Hsu. I am a Data Engineer at Meta in Bellevue and also pursuing an MSCS at Georgia Tech. 
+            I enjoy running, hiking, and speedrunning video games. My favorite game of all time is The Legend of Zelda Twilight Princess.
+            Feel free to connect with me on LinkedIn!
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file"></i></a>
@@ -41,7 +42,7 @@
           <div class="polaroid">
               <img src="images/cat-fish.png" alt="Home" style="width:100%">
               <div class="container">
-                <p>Home</p>
+                <p>Searching for fish</p>
               </div>
           </div>
         </a>   
