updating image text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="polaroid">
               <img src="images/cat-fish.png" alt="Home" style="width:100%">
               <div class="container">
-                <p>Searching for fish</p>
+                <p>🐠 Searching for fish 🐟</p>
               </div>
           </div>
         </a>   
