--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <a href="https://www.instagram.com/rasterroo/"><i class="fab fa-instagram"></i></a>
           </p>
         </div>
-        <a href="https://www.youtube.com/watch?v=xy3AcmW0lrQ">    
+        <a href="https://youtu.be/mD_N2bTGXEs?si=XuWicb4Plg3w0XrY">    
           <div class="polaroid">
               <img src="images/cat-fish.png" alt="Home" style="width:100%">
               <div class="container">
-                <p>🐠 Searching for fish 🐟</p>
+                <p>🐠 searching for fish 🐟</p>
               </div>
           </div>
         </a>   
