--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hello</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I am a Data Engineer at Meta in Bellevue, WA and also pursuing an MSCS at Georgia Tech. 
+            My name is Bobby Hsu. I am a Data Engineer at Meta in Bellevue, WA and also pursuing an OMSCS at Georgia Tech. 
             I enjoy running, hiking, and speedrunning video games. My favorite game of all time is The Legend of Zelda Twilight Princess.
             Feel free to connect with me on LinkedIn!
           </p>
