--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hello</h2>
+        <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I'm working as a Data Engineer at Meta in Bellevue, WA and pursuing a MSCS at Georgia Tech.
+            My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team. I am also pursuing a MSCS at Georgia Tech.
               I previously worked at State Farm as a Lead Data Engineer. I have a strong background in designing data pipelines in AWS, writing SQL queries, and building Python API's in EKS.
             I enjoy running, hiking, and speedrunning video games. My favorite game of all time is The Legend of Zelda: Twilight Princess.
            
@@ -55,6 +55,7 @@
 
 </body>
 </html>
+
 
 
 
