--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="polaroid">
               <img src="images/cat-fish.png" alt="Home" style="width:100%">
               <div class="container">
-                <p>🐠 searching for fish 🐟</p>
+                <p>🐠 fish 🐟</p>
               </div>
           </div>
         </a>   
@@ -55,6 +55,7 @@
 
 </body>
 </html>
+
 
 
 
