--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>
             My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team. I am also pursuing a MSCS at Georgia Tech.
               I previously worked at State Farm as a Lead Data Engineer. I have a strong background in designing data pipelines in AWS, writing SQL queries, and building Python API's in EKS.
-            I enjoy running, hiking, and speedrunning video games. My favorite game of all time is The Legend of Zelda: Twilight Princess.
+            I enjoy running, hiking, and speedrunning video games.
            
           </p>
           <p> 
@@ -43,7 +43,7 @@
           <div class="polaroid">
               <img src="images/cat-fish.png" alt="Home" style="width:100%">
               <div class="container">
-                <p>🐠 fish 🐟</p>
+                <p>🐟🐈</p>
               </div>
           </div>
         </a>   
@@ -55,6 +55,7 @@
 
 </body>
 </html>
+
 
 
 
