--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team and also pursuing a MSCS at Georgia Tech.
-            I have a strong background in designing data pipelines in AWS, writing SQL queries, building Python API's, and delivering high impact work. 
-            Outside of work, I enjoy running, hiking, and speedrunning video games.
+            My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team and also pursuing a MSCS at Georgia Tech, with the goal of being the best data engineer I can be! 
+            Outside of work I enjoy running, hiking, and speedrunning video games.
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
@@ -52,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
