--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
           <p>
             My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team and also pursuing a MSCS at Georgia Tech. My goal is being the best data engineer I can be! 
-            Outside of work I enjoy running, hiking, and speedrunning video games like RE4, Megaman, and Twilight Princess. 
+            Outside of work I enjoy running, hiking, and speedrunning video games like RE4, MegaMan X4, and Twilight Princess. 
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
