--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team and also pursuing a MSCS at Georgia Tech. My goal is being the best data engineer I can be! 
-            Outside of work I enjoy running, hiking, and speedrunning video games. Feel free to add me on LinkedIn! 
+            My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team and also pursuing a MSCS at Georgia Tech. I have extensive experience writing APIs in Python and creating large-scale ETL pipelines in AWS. 
+            Outside of work I enjoy running, hiking, and speedrunning video games like Twilight Princess. Feel free to add me on LinkedIn! 
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
