--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         <div>
           <p>
             My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team and also pursuing a MSCS at Georgia Tech. I have extensive experience writing APIs in Python and creating large-scale ETL pipelines in AWS. 
-            Outside of work I enjoy running, hiking, and speedrunning video games like Twilight Princess. Feel free to add me on LinkedIn! 
+            In my free time, I enjoy running, hiking, and speedrunning video games. Feel free to add me on LinkedIn! 
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://medium.com/@rasterroo"><i class="fab fa-medium"></i></a>
             <a href="https://www.instagram.com/rasterroo/"><i class="fab fa-instagram"></i></a>
           </p>
         </div>
@@ -51,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
